--- a/S2_SignalAquisition.ipynb
+++ b/S2_SignalAquisition.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# II. Signal Acquisition Basics\n",
+    "# II. Principles of Biosignal Acquisition\n",
     "<br>\n",
     "<div class=\"title\"style=\"width:100%; background:linear-gradient(to right,#FDC86E,#fbb144);font-family:'arial black',monospace; text-align: center; padding: 7px 0; border-radius: 5px 50px;margin-top:-15px\" >  </div>"
    ]
@@ -81,7 +81,34 @@
    "metadata": {},
    "source": [
     "# <div style=\"color:#fbb144\"> 1. Introduction </div>\n",
-    "\n"
+    "\n",
+    "Diagrama da aquisiçao de sinal\n",
+    "\n",
+    "exemplos de sinais\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <div style=\"color:#fbb144\"> 2. Filtering and Amplification </div>\n",
+    "\n",
+    "amplitude dos sinais em tensao, especialmente biologicos\n",
+    "\n",
+    "circuitos para filtrar e amplificar\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <div style=\"color:#fbb144\"> 2. Analog Signal Acquisition </div>\n",
+    "\n",
+    "amostragem\n",
+    "\n",
+    "quantizaçao\n",
+    "\n",
+    "recolha de sinal\n"
    ]
   },
   {
