--- a/S1_IntroPython.ipynb
+++ b/S1_IntroPython.ipynb
@@ -2181,7 +2181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Create a function that takes two integers and prints the higher value. Test it with your own examples."
+    "2. Create a function that takes two integers and prints the highest value. Test it with your own examples."
    ]
   },
   {
@@ -2414,7 +2414,7 @@
    "metadata": {},
    "source": [
     "2. On the previous example to search for the '.txt' files, we checked the file extension by the 4 last characters. How could this be a problem? Try to search for the '.csv' files usig the method .split() instead.\n",
-    "*Note: search for the split method documentation <a href=\"https://docs.python.org/3/library/stdtypes.html#:~:text=)%0A%27Monty%27-,str.split,-(sep%3D\">here</a> or <a href=\"https://www.w3schools.com/python/ref_string_split.asp\">here</a>, or type `help(str.split)`).*"
+    "*Note: search for the split method documentation <a href=\"https://docs.python.org/3/library/stdtypes.html#:~:text=)%0A%27Monty%27-,str.split,-(sep%3D\">here</a> or <a href=\"https://www.w3schools.com/python/ref_string_split.asp\">here</a>, or type `help(str.split)`.*"
    ]
   },
   {
@@ -3269,7 +3269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```Contributors:  ``` Hugo Plácido da Silva, Rafael Silva"
+    "```Contributors:  ``` Ana Fred, Hugo Plácido da Silva and Rafael Silva"
    ]
   }
  ],
